Code/HID/.metadata/.plugins/org.eclipse.cdt.ui/test.build.log
12:55:23 **** Incremental Build of configuration Debug for project test ****
make -j16 all 
arm-none-eabi-gcc "../USB_DEVICE/Target/usbd_conf.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"USB_DEVICE/Target/usbd_conf.d" -MT"USB_DEVICE/Target/usbd_conf.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "USB_DEVICE/Target/usbd_conf.o"
arm-none-eabi-gcc "../USB_DEVICE/App/usb_device.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"USB_DEVICE/App/usb_device.d" -MT"USB_DEVICE/App/usb_device.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "USB_DEVICE/App/usb_device.o"
arm-none-eabi-gcc "../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.d" -MT"Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c:368:11: warning: excess elements in array initializer
  368 |     0x25, 0x01,          // LOGICAL_MAXIMUM (1)
      |           ^~~~
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c:368:11: note: (near initialization for 'HID_WHEEL_ReportDesc')
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c:369:5: warning: excess elements in array initializer
  369 |     0x75, 0x01,          // REPORT_SIZE (1)
      |     ^~~~
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c:369:5: note: (near initialization for 'HID_WHEEL_ReportDesc')
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c:369:11: warning: excess elements in array initializer
  369 |     0x75, 0x01,          // REPORT_SIZE (1)
      |           ^~~~
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c:369:11: note: (near initialization for 'HID_WHEEL_ReportDesc')
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c:370:5: warning: excess elements in array initializer
  370 |     0x95, 0x01,          // REPORT_COUNT (1)
      |     ^~~~
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c:370:5: note: (near initialization for 'HID_WHEEL_ReportDesc')
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c:370:11: warning: excess elements in array initializer
  370 |     0x95, 0x01,          // REPORT_COUNT (1)
      |           ^~~~
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c:370:11: note: (near initialization for 'HID_WHEEL_ReportDesc')
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c:371:5: warning: excess elements in array initializer
  371 |     0x81, 0x02,          // INPUT (Data,Var,Abs)
      |     ^~~~
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c:371:5: note: (near initialization for 'HID_WHEEL_ReportDesc')
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c:371:11: warning: excess elements in array initializer
  371 |     0x81, 0x02,          // INPUT (Data,Var,Abs)
      |           ^~~~
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c:371:11: note: (near initialization for 'HID_WHEEL_ReportDesc')
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c:372:5: warning: excess elements in array initializer
  372 |     0xC0                 // END_COLLECTION
      |     ^~~~
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c:372:5: note: (near initialization for 'HID_WHEEL_ReportDesc')
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c: In function 'USBD_HID_Setup':
../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c:462:38: warning: assignment discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
  462 |                                 pbuf = HID_WHEEL_ReportDesc;
      |                                      ^
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:104:40: error: 'hUsbDeviceFS' undeclared (first use in this function)
  104 |                   USBD_HID_SendReport(&hUsbDeviceFS, wheel_report, sizeof(wheel_report));
      |                                        ^~~~~~~~~~~~
../Core/Src/main.c:104:40: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j16 all" terminated with exit code 2. Build might be incomplete.

12:55:24 Build Failed. 3 errors, 9 warnings. (took 740ms)

